--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
-section {
+ /* Style all font awesome icons */
+.fa {
+  /* padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 25%; */
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  /* opacity: 0.7; */
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  /* background: #3B5998;
+  color: white; */
+}
+
+/* Twitter */
+.fa-twitter {
+  /* background: #3B5998; */
+  color: rgb(46, 238, 252);
+} 
+
+.fa-instagram {
+    /* background: #3B5998; */
+    color: rgb(252, 120, 120);
+  }
+
+  section {
     min-height: 250px;
 }
+
