--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+
 /* Twitter */
 .fa-twitter {
   color: rgb(46, 238, 252);
